# Jarvis-Personal-Assistant

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: config.yaml  mcp_servers.json
docs/: CHANGELOG.md  CONTEXT.md  GUI_PLAN.md  IMPLEMENTATION_PLAN.md  PRD.md
planning/: 01_research_alpha.md  02_architecture_beta.md  03_features_gamma.md  04_risks_delta.md  05_debate_epsilon.md  06_devils_advocate_zeta.md  07_FINAL_CONSENSUS.md
src/jarvis/: __init__.py  __main__.py  cli.py  config.py  database.py
src/jarvis/agent/: __init__.py  graph.py  mcp_loader.py  tools.py
src/jarvis/api/: __init__.py  auth.py  deps.py  main.py
src/jarvis/api/routes/: __init__.py  chat.py  conversations.py  mcp.py  notes.py  reminders.py  status.py  voice.py
src/jarvis/features/: __init__.py  deep_search.py  notes.py  reminders.py  search.py
src/jarvis/memory/: __init__.py  session.py
src/jarvis/utils/: __init__.py  errors.py  notifications.py
src/jarvis/voice/: __init__.py  audio.py  stt.py  tts.py
